combine two arrays in OperationNotAllowedException.cpp into one https://bugs.webkit.org/show_bug.cgi?id=83445

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* fileapi/OperationNotAllowedException.cpp:
(OperationNotAllowedExceptionNameDescription):
(WebCore):
(WebCore::OperationNotAllowedException::initializeDescription):

git-svn-id: svn://svn.chromium.org/blink/trunk@113682 bbb929c8-8fbe-4397-9dbb-9b2b20218538